--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "novel-gpt",
+  "name": "chat-gpt",
   "type": "module",
-  "version": "0.0.1",
+  "version": "1.0.1",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
