--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "markdown-it-highlightjs": "^4.0.1",
     "markdown-it-katex": "^2.0.3",
     "solid-js": "^1.6.11",
+    "solid-toast": "^0.4.0",
     "undici": "^5.20.0"
   },
   "devDependencies": {
