--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "markdown-it-katex": "^2.0.3",
     "solid-js": "^1.6.11",
     "solid-toast": "^0.4.0",
+    "solidjs-use": "^1.2.0",
     "undici": "^5.20.0"
   },
   "devDependencies": {
