docs: add env var table

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # Custom base url for OpenAI API. default: https://api.openai.com
 OPENAI_API_BASE_URL=https://api.openai.com
-# Custom OpenAI API Key.
+# Custom OpenAI API Key
 OPENAI_API_KEY=
 # Provide proxy for OpenAI API. e.g. http://127.0.0.1:7890
 HTTPS_PROXY=
