--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ OPENAI_API_BASE_URL=https://api.openai.com
 OPENAI_API_KEY=
 # Provide proxy for OpenAI API. e.g. http://127.0.0.1:7890
 HTTPS_PROXY=
+# Secret string for the project. Use for generating signatures for API calls
+SECRET_KEY=
