feat: header scripts

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,5 @@ OPENAI_API_KEY=
 HTTPS_PROXY=
 # Secret string for the project. Use for generating signatures for API calls
 SECRET_KEY=
+
+HEAD_SCRIPTS=
