upd: about and foot

--- a/.env.example
+++ b/.env.example
@@ -6,8 +6,12 @@ OPENAI_API_KEY=
 HTTPS_PROXY=
 # Secret string for the project. Use for generating signatures for API calls
 SECRET_KEY=
-
+# Custom head scripts.
 HEAD_SCRIPTS=
+
+MAX_REQUEST_PERHOUR=
+
+# Vercel app.
 VERCEL_TOKEN=
 VERCEL_PROJECT_ID=
 VERCEL_TEAM_ID=
