--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
     "build": "astro build",
     "build:vercel": "OUTPUT=vercel astro build",
     "build:netlify": "OUTPUT=netlify astro build",
+    "build:cloudflare": "OUTPUT=cloudflare astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/cloudflare": "^6.2.2",
+    "@astrojs/netlify": "2.0.0",
     "@astrojs/node": "^5.0.4",
     "@astrojs/solid-js": "^2.0.2",
     "@astrojs/vercel": "^3.1.3",
-    "@astrojs/netlify": "2.0.0",
     "@unocss/reset": "^0.50.1",
     "astro": "^2.0.15",
     "eventsource-parser": "^0.1.0",
